@@ -4,7 +4,7 @@
         android:id="@+id/thumbnail_view_switcher"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-        
+ 
     <!-- LOADING_VIEW -->
     
     <FrameLayout 
