@@ -58,83 +58,93 @@ public class ImageLoader extends Thread
 		});
 	}
 	
+	private void queueFront(final File cacheFile, final ViewHolder holder, final int position)
+	{
+		handler.postAtFrontOfQueue(new Runnable()
+		{
+			public void run()
+			{
+				if(holder.index != position) return;
+				
+				Bitmap thumbnail = BitmapFactory.decodeFile(cacheFile.getPath());
+				if(mListener != null) mListener.onImageLoaded(holder, thumbnail, position);
+			}
+		});
+	}
+	
+	private void queueBack(final File cacheFile, final ViewHolder holder, final int position)
+	{
+		handler.post(new Runnable()
+		{
+			public void run()
+			{
+				if(holder.index != position)
+		 		{
+		 			// If the on-screen view index doesn't match the thumbnail index, that means
+					// it went off-screen and got recycled before the this event ever got a chance
+					// to fire. Just forget about it for now, we'll load it next time it scrolls by
+					// which keeps the UI more responsive and relevant.
+		 			return;
+		 		}
+				
+				try
+				{
+		 			// reacquire an EGL context for every pass in this thread
+		 			// (setRenderer might be a bit heavy for this purpose, look into doing less if possible)
+		 			if(!glOffscreenSurface.checkCurrentThread())
+		 			{
+		 				glOffscreenSurface.setRenderer(renderer);
+		 			}
+		 			
+		 			renderer.loadBattleBackground(position);
+		 			
+		 			Bitmap thumbnail = glOffscreenSurface.getBitmap();
+		 			
+		 			cacheFile.getParentFile().mkdirs(); // safely does nothing if path exists
+		 			
+						FileOutputStream fileOutputStream = new FileOutputStream(cacheFile);
+						thumbnail.compress(CompressFormat.PNG, 80, fileOutputStream); // quality is irrelevant for PNGs
+						fileOutputStream.close();
+		 			
+						// thumbnail cached correctly; poke the UI thread right in its callback
+						
+						if(mListener != null) mListener.onImageLoaded(holder, thumbnail, position);
+				}
+				catch (FileNotFoundException e)
+				{
+		 			Log.i(TAG, "coult not write thumbnail to disk cache");
+						e.printStackTrace();
+		 		}
+				catch(Exception e)
+				{
+		 			Log.e(TAG, "Something exploded: \"" + e.getMessage() + "\"");
+		 			e.printStackTrace();
+				}
+			}
+		});
+	}
+	
 	public synchronized void queueImageLoad(final int position, final ViewHolder holder)
 	{
-		try
+		String cacheFileName = String.valueOf(position); //String.format("%03d", index);
+ 		File cacheDir = new File(context.getCacheDir(), "thumbnails");
+ 		File cacheFile = new File(cacheDir, cacheFileName);
+ 		
+ 		try
 		{
-			handler.post(new Runnable()
-			{
-				public void run()
-				{
-					if(holder.index != position)
-			 		{
-			 			// If the on-screen view index doesn't match the thumbnail index, that means
-						// it went off-screen and got recycled before the this event ever got a chance
-						// to fire. Just forget about it for now, we'll load it next time it scrolls by
-						// which keeps the UI more responsive and relevant.
-			 			return;
-			 		}
-					
-					String cacheFileName = String.valueOf(position); //String.format("%03d", index);
-			 		File cacheDir = new File(context.getCacheDir(), "thumbnails");
-			 		File cacheFile = new File(cacheDir, cacheFileName);
-			 		
-					if(cacheFile.exists())
-			 		{
-						// This shouldn't occur under usual circumstances, but if it does, the work's already done
-						// so there's nothing else left to do.
-			 			return;
-			 		}
-					else
-					{
-						try
-						{
-							//Bitmap thumbnail = null;
-				 			//Log.i(TAG, "generating thumbnail");
-				 			
-				 			// reacquire an EGL context for every pass in this thread
-				 			// (setRenderer might be a bit heavy for this purpose, look into doing less if possible)
-				 			if(!glOffscreenSurface.checkCurrentThread())
-				 			{
-				 				glOffscreenSurface.setRenderer(renderer);
-				 			}
-				 			
-				 			renderer.loadBattleBackground(position);
-				 			
-				 			Bitmap thumbnail = glOffscreenSurface.getBitmap();
-				 			
-				 			//Log.i(TAG, "thumbnail generated; writing to disk cache...");
-				 			
-				 			cacheFile.getParentFile().mkdirs(); // safely does nothing if path exists
-				 			
-			 				FileOutputStream fileOutputStream = new FileOutputStream(cacheFile);
-			 				thumbnail.compress(CompressFormat.PNG, 80, fileOutputStream); // quality is irrelevant for PNGs
-			 				fileOutputStream.close();
-				 			
-			 				// thumbnail cached correctly; poke the UI thread right in its callback
-			 				
-				 			if(mListener != null)
-				 			{
-								mListener.onImageLoaded(holder, thumbnail, position);
-							}
-						}
-						catch (FileNotFoundException e)
-						{
-				 			Log.i(TAG, "coult not write thumbnail to disk cache");
-			 				e.printStackTrace();
-				 		}
-						catch(Exception e)
-						{
-				 			Log.e(TAG, "Something exploded: \"" + e.getMessage() + "\"");
-				 			e.printStackTrace();
-						}
-			 		}
-				}
-			});
+	 		if(cacheFile.exists())
+	 		{
+	 			queueFront(cacheFile, holder, position);
+	 		}
+	 		else
+	 		{
+	 			queueBack(cacheFile, holder, position);
+	 		}
 		}
-		catch(Exception e)
+ 		catch(Exception e)
 		{
 			Log.w(TAG, "Failed to post an ImageLoader event");
 		}
+		
 	}
 }
